--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="Assets/CSS/style.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>West Coast Word Game</title>
+    <link rel="icon" type="image/jpeg" href="./Assets/Images/icon.jpg" />
   </head>
   <body>
+    <header><h1>West Coast Game</h1></header>
+    <main>
+      <section class="container">
+        <div class="left-box">
+          <div>
+            <img src="./Assets/Images/icon.jpg" alt="game image" id="image" />
+          </div>
+        </div>
+
+        <div class="right-box">
+          <h2 id="start-key">Press any key to get started</h2>
+          <h4 id="wins">Wins</h4>
+          <h4>Current Word</h4>
+          <p id="word"></p>
+
+          <h1 id="key"></h1>
+          <h3>
+            Number of guesses remaining<br /><span
+              id="remaining-guesses"
+            ></span>
+          </h3>
+          <h3>
+            Letters already guessed <br /><span id="guessed-letters"></span>
+          </h3>
+        </div>
+      </section>
+    </main>
+    <footer>copyright&copy;2019</footer>
     <script src="Assets/JavaScript/game.js"></script>
   </body>
 </html>
