--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="right-box">
           <h2 id="start-key">Press any key to get started</h2>
-          <h4 id="wins">Wins</h4>
+          <h4>Wins <span id="wins"></span></h4>
           <h4>Current Word</h4>
           <p id="word"></p>
 
