Displaying the correct answer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         height="200px"
       />
       <h3 class="float-right" id="headerTitle">West Coast Word Game</h3>
+      <div id="correctAnswer"></div>
     </header>
     <main>
       <section class="container">
@@ -40,23 +41,24 @@
               class="img-fluid"
               id="image"
             />
+            <div id="play"></div>
           </div>
 
           <div class="col-lg-4">
             <h2 id="start-key">Press any key to get started</h2>
-            <h4>Wins <span id="wins"></span></h4>
-            <h4>Current Word</h4>
+            <h3>Wins <span id="wins"></span></h3>
+            <h3>Current Word</h3>
             <p id="word"></p>
 
             <h1 id="key"></h1>
-            <h3>
+            <h2>
               Number of guesses remaining<br /><span
                 id="remaining-guesses"
               ></span>
-            </h3>
-            <h3>
+            </h2>
+            <h2>
               Letters already guessed <br /><span id="guessed-letters"></span>
-            </h3>
+            </h2>
           </div>
         </div>
         <div class="col-lg-2"></div>
