fixing the letter input

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         width="200px"
         height="200px"
       />
-      <h3 class="float-right" id="headerTitle">West Coast Word Game</h3>
+      <h3 id="headerTitle">West Coast Word Game</h3>
       <div id="correctAnswer"></div>
     </header>
     <main>
