Fixing pressed letters

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               ></span>
             </h2>
             <h2>
-              Letters already guessed <br /><span id="guessed-letters"></span>
+              Letters already pressed <br /><span id="guessed-letters"></span>
             </h2>
           </div>
         </div>
